[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Commands/Options.gd" type="Script" id=2]

[node name="Options" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Delete" type="Button" parent="VBoxContainer"]
margin_left = 937.0
margin_right = 1010.0
margin_bottom = 25.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 8
size_flags_vertical = 3
text = "- Delete -"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 1010.0
margin_bottom = 493.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 17.88

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 503.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "String"
items = [ "Sub-Command", null, false, 0, null, "Sub-Command-Group", null, false, 1, null, "String", null, false, 2, null, "Integer", null, false, 3, null, "Boolean", null, false, 4, null, "User", null, false, 5, null, "Channel", null, false, 6, null, "Role", null, false, 7, null, "Mentionable", null, false, 8, null, "Number", null, false, 9, null ]
selected = 2

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 507.0
margin_right = 1010.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Required"

[node name="OptionName" type="LineEdit" parent="VBoxContainer"]
margin_top = 497.0
margin_right = 1010.0
margin_bottom = 521.0
placeholder_text = "Option Name"
caret_blink = true

[node name="OptionDescription" type="LineEdit" parent="VBoxContainer"]
margin_top = 525.0
margin_right = 1010.0
margin_bottom = 549.0
placeholder_text = "Description"
caret_blink = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 553.0
margin_right = 1010.0
margin_bottom = 573.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 945.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Choices"
valign = 1

[node name="Add" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 949.0
margin_right = 1010.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 8
text = "+ Add +"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 577.0
margin_right = 1010.0
margin_bottom = 581.0

[node name="ChoicesContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 585.0
margin_right = 1010.0
margin_bottom = 585.0

[connection signal="pressed" from="VBoxContainer/Delete" to="." method="_on_Delete_pressed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="text_changed" from="VBoxContainer/OptionName" to="." method="_on_OptionName_text_changed"]
[connection signal="text_changed" from="VBoxContainer/OptionDescription" to="." method="_on_OptionDescription_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Add" to="." method="_on_Add_pressed"]
